--- a/styles.css
+++ b/styles.css
@@ -884,3 +884,8 @@ footer {
     -webkit-text-fill-color: transparent; /* Makes the text transparent */
     text-fill-color: transparent; /* Optional, may not be supported */
 }
+
+html {
+    scroll-behavior: smooth;
+  }
+  
